Fix tag overflow on mobile

--- a/themes/Light/theme.css
+++ b/themes/Light/theme.css
@@ -255,7 +255,7 @@ code, .codeblock {
 }
 /* Tags */
 .tag {
- display: inline;
+ display: inline-block;
  margin: 3px;
  background: #99f;
  border: 1px solid var(--main-border-color);
@@ -265,7 +265,7 @@ code, .codeblock {
  background: #ccf;
 }
 .tagslabel {
- display: inline;
+ display: inline-block;
  margin-right: 4px;
 }
 /* Home page/All posts page */
